[workspace]

resolver = "2"

members = [
    "packages/dapi-grpc",
    "packages/rs-dapi-grpc-macros",
    "packages/rs-dpp",
    "packages/rs-drive",
    "packages/rs-platform-value",
    "packages/rs-platform-serialization",
    "packages/rs-platform-serialization-derive",
    "packages/rs-platform-version",
    "packages/rs-platform-versioning",
    "packages/rs-platform-value-convertible",
    "packages/rs-drive-abci",
    "packages/dashpay-contract",
    "packages/withdrawals-contract",
    "packages/masternode-reward-shares-contract",
    "packages/feature-flags-contract",
    "packages/dpns-contract",
    "packages/data-contracts",
    "packages/rs-drive-proof-verifier",
    "packages/rs-context-provider",
    "packages/rs-sdk-trusted-context-provider",
    "packages/wasm-dpp",
    "packages/rs-dapi-client",
    "packages/rs-sdk",
    "packages/strategy-tests",
    "packages/simple-signer",
    "packages/rs-json-schema-compatibility-validator",
    "packages/check-features",
    "packages/wallet-utils-contract",
    "packages/token-history-contract",
    "packages/keyword-search-contract",
    "packages/wasm-drive-verify",
    "packages/dash-platform-balance-checker",
    "packages/rs-platform-wallet"
]

exclude = ["packages/wasm-sdk"] # This one is experimental and not ready for use

[workspace.package]

rust-version = "1.89"

